--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -445,6 +445,9 @@ anova-wifi==0.12.0
 # homeassistant.components.anthemav
 anthemav==1.4.1
 
+# homeassistant.components.apm
+apm_crewconnect==0.0.10
+
 # homeassistant.components.weatherkit
 apple_weatherkit==1.1.2
 
